# services/ones-api/src/main/java/com/ones/api/adapters/inbound/rest/events/EventResponse.java
@@ -6,6 +6,10 @@ public record EventResponse(
         String id,
         String ownerId,
         Instant createdAt,
-        String title
+        String title,
+        String eventTypeId,
+        String location,
+        Instant startAt,
+        Instant endAt
 ) {
 }
