# services/ones-api/src/main/java/com/ones/api/domain/events/Event.java
@@ -9,12 +9,29 @@ public class Event {
     private final String ownerId;
     private final Instant createdAt;
     private final String title;
+    private final String eventTypeId;
+    private final String location;
+    private final Instant startAt;
+    private final Instant endAt;
 
-    public Event(String eventId, String ownerId, Instant createdAt, String title) {
+    public Event(
+            String eventId,
+            String ownerId,
+            Instant createdAt,
+            String title,
+            String eventTypeId,
+            String location,
+            Instant startAt,
+            Instant endAt
+    ) {
         this.eventId = Objects.requireNonNull(eventId);
         this.ownerId = Objects.requireNonNull(ownerId);
         this.createdAt = Objects.requireNonNull(createdAt);
         this.title = Objects.requireNonNull(title);
+        this.eventTypeId = Objects.requireNonNull(eventTypeId);
+        this.location = Objects.requireNonNull(location);
+        this.startAt = Objects.requireNonNull(startAt);
+        this.endAt = Objects.requireNonNull(endAt);
     }
 
     public String getEventId() {
@@ -31,5 +48,21 @@ public class Event {
 
     public String getTitle() {
         return title;
+    }
+
+    public String getEventTypeId() {
+        return eventTypeId;
+    }
+
+    public String getLocation() {
+        return location;
+    }
+
+    public Instant getStartAt() {
+        return startAt;
+    }
+
+    public Instant getEndAt() {
+        return endAt;
     }
 }
